--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,8 @@ h1,
 .font-bold {
   font-family: var(--font-aileron-bold);
 }
+
+html body[data-scroll-locked] {
+  overflow-y: scroll !important;
+  margin-right: 0px !important;
+}
